permission sistemi eklendi. validationlar eklendi.